--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <p>Ng Wei Enn (@yidongmuhe)</p>
             <hr>
             <p>灵感来源：</p>
-            <p>郁闷的坤中生涯(kchs)</p>
+            <p>郁闷的坤中生涯(@kchs)</p>
         </div>
     </div>
     <!-- 添加房间输入框 -->
